base/deployment/catalog-db-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-db-depl
  template:
    metadata:
      labels:
        app: catalog-db-depl
    spec:
      containers:
      - name: catalog-db
        image: redis:8.6
        imagePullPolicy: Always
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 6379
