base/deployment/catalog-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-svc
  template:
    metadata:
      labels:
        app: catalog-svc
    spec:
      containers:
      - name: catalog-svc
        image: andriuskl/catalog-svc_1:2.0.4
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
