base/deployment/history-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-svc
  template:
    metadata:
      labels:
        app: history-svc
    spec:
      containers:
      - name: history-svc
        image: andriuskl/history-svc:2.0.5
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
