base/deployment/login-page-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-page-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-page-svc
  template:
    metadata:
      labels:
        app: login-page-svc
    spec:
      containers:
      - name: login-page-svc
        image: andriuskl/login-page-svc:2.0.5
        imagePullPolicy: Always
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "150m"
        ports:
        - containerPort: 5000
