base/deployment/product-admin-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-admin-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-admin-svc
  template:
    metadata:
      labels:
        app: product-admin-svc
    spec:
      containers:
      - name: product-admin-svc
        image: andriuskl/product-admin-svc:2.0.5
        imagePullPolicy: Always
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5000
