base/deployment/shop-front-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-front-svc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-front-svc
  template:
    metadata:
      labels:
        app: shop-front-svc
    spec:
      containers:
      - name: shop-front-svc
        image: andriuskl/shop-front-svc:2.0.5
        imagePullPolicy: Always
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5000
