base/deployment/song-player-nginx-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-player-nginx-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: song-player-nginx
  template:
    metadata:
      labels:
        app: song-player-nginx
    spec:
      containers:
      - name: song-player-nginx
        image: nginx:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
