base/deployment/history-svc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: history-svc
spec:
  selector:
    app: history-svc
  ports:
  - port: 5000
    targetPort: 5000
