base/deployment/login-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: login-db
spec:
  selector:
    app: login-db-depl
  ports:
  - port: 6379
    targetPort: 6379
