base/deployment/login-page-svc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: login-page-svc
spec:
  selector:
    app: login-page-svc
  ports:
  - port: 5000
    targetPort: 5000
